<resources>
    <string name="app_name">LisNav</string>
    <string name="audioLanguage">en-GB</string>
    <string name="audioFrontRight">In front of you, on the right, you will find </string>
    <string name="audioBackRight">Behind you, to the right, you will find </string>
    <string name="audioBackLeft">Behind you, to the left, you will find </string>
    <string name="audioFrontLeft">In front of you, to the left, you will find </string>
    <string name="audioPosition">You are in </string>
    <string name="audioSurrounding">In front of you, there is: </string>
    <string name="audioNoLocation">Sorry! We were unable to find your location.</string>
    <string name="audioNote">At this location, a user has added a </string>
    <string name="audioNoteDescription">with the remarks </string>
    <string name="Warning">Warning</string>
    <string name="Hazard">Hazard</string>
    <string name="Emergency">Emergency</string>
    <string name="point_of_interest">Point of interest</string>
    <string name="road_closure">Road closure</string>
    <string name="Description">Description</string>
    <string name="Type">Type</string>
    <string name="Duration">Duration</string>
    <string name="Add">Add</string>
    <string name="Hours">hours</string>
    <string name="Days">days</string>
    <string name="close">Close</string>
    <string name="apptitle">Assisted Navigation in Lisbon</string>
    <string name="funding">This project is part of VoxPop, an innovative project that aims to foster the digital transition of the mobility sector in Lisbon, Portugal, through a process of change based on the 3 main vectors of digital transformation: People, Processes and Technology. The project is led by the Lisbon City Council (CML) and mobilises municipal entities, private companies and the civil society.\n\nThis project is co-financed by the Municipality of Lisbon\u0020\u0020and the European Regional Development Fund\u0020\u0020through the Urban Innovative Actions Initiative.</string>
    <string name="cup">a cup</string>
    <string name="bottle">a bottle</string>
    <string name="person">a person</string>
    <string name="vase">a vase</string>
    <string name="mouse">a mouse</string>
    <string name="toilet">a toilet</string>
    <string name="cell_phone">a cell phone</string>
    <string name="bowl">a bowl</string>
    <string name="toothbrush">a toothbrush</string>
    <string name="stop_sign">a stop sign</string>
    <string name="knife">a knife</string>
    <string name="sink">a sink</string>
    <string name="remote">a remote</string>
    <string name="frisbee">a frisbee</string>
    <string name="umbrella">an umbrella</string>
    <string name="surfboard">a surfboard</string>
    <string name="chair">a chair</string>
    <string name="scissors">a scissors</string>
    <string name="dining_table">a dining table</string>
    <string name="wine_glass">a wine glass</string>
    <string name="aeroplane">an aeroplane</string>
    <string name="spoon">a spoon</string>
    <string name="laptop">a laptop</string>
    <string name="toaster">a toaster</string>
    <string name="banana">a banana</string>
    <string name="parking_meter">a parking meter</string>
    <string name="kite">a kite</string>
    <string name="keyboard">a keyboard</string>
    <string name="cake">a cake</string>
    <string name="fork">a fork</string>
    <string name="hair_drier">a hair drier</string>
    <string name="book">a book</string>
    <string name="clock">a clock</string>
    <string name="sports_ball">a sports ball</string>
    <string name="hot_dog">a hot dog</string>
    <string name="snowboard">a snowboard</string>
    <string name="fire_hydrant">a fire hydrant</string>
    <string name="tvmonitor">a monitor</string>
    <string name="donut">a donut</string>
    <string name="traffic_light">a traffic light</string>
    <string name="handbag">a handbag</string>
    <string name="car">a car</string>
    <string name="bird">a bird</string>
    <string name="skateboard">a skateboard</string>
    <string name="suitcase">a suitcase</string>
    <string name="apple">an apple</string>
    <string name="tie">a tie</string>
    <string name="orange">a orange</string>
    <string name="microwave">a microwave</string>
    <string name="refrigerator">a refrigerator</string>
    <string name="carrot">a carrot</string>
    <string name="boat">a boat</string>
    <string name="baseball_bat">a baseball bat</string>
    <string name="cat">a cat</string>
    <string name="bus">a bus</string>
    <string name="oven">an oven</string>
    <string name="bed">a bed</string>
    <string name="bench">a bench</string>
    <string name="potted_plant">a potted plant</string>
    <string name="motorbike">a motorbike</string>
    <string name="truck">a truck</string>
    <string name="sandwich">a sandwich</string>
    <string name="broccoli">a broccoli</string>
    <string name="baseball_glove">a baseball glove</string>
    <string name="sofa">a sofa</string>
    <string name="train">a train</string>
    <string name="elephant">an elephant</string>
    <string name="teddy_bear">a teddy bear</string>
    <string name="bear">a bear</string>
    <string name="tennis_racket">a tennis racket</string>
    <string name="backpack">a backpack</string>
    <string name="skis">skis</string>
    <string name="zebra">a zebra</string>
    <string name="horse">a horse</string>
    <string name="sheep">a sheep</string>
    <string name="dog">a dog</string>
    <string name="pizza">a pizza</string>
    <string name="bicycle">a bicycle</string>
    <string name="cow">a cow</string>
    <string name="giraffe">a giraffe</string>
    <string name="legal">Terms of Use\n\n\nInterpretation and Definitions\n\n\nInterpretation\n\nThe words of which the initial letter is capitalized have meanings defined under the following conditions. The following definitions shall have the same meaning regardless of whether they appear in singular or in plural.\n\n\nDefinitions\n\nFor the purposes of this Disclaimer:\n\n• Company (referred to as either \"the Company\", \"We\", \"Us\" or \"Our\" in this Disclaimer) refers to 3FINERY LTD, SC659495. 7 Hozier House, 129 Hyndford Road, Lanark, Scotland, ML11 9GG. United Kingdom.\n• Service refers to the Application.\n• You means the individual accessing the Service, or the company, or other legal entity on behalf of which such individual is accessing or using the Service, as applicable.\n• Application means the software program provided by the Company downloaded by You on any electronic device named LisNav.\n\n\nDisclaimer\n\nThe information contained on the Service is for general information purposes only. The Company assumes no responsibility for errors or omissions in the contents of the Service. In no event shall the Company be liable for any special, direct, indirect, consequential, or incidental damages or any damages whatsoever, whether in an action of contract, negligence or other tort, arising out of or in connection with the use of the Service or the contents of the Service. The Company reserves the right to make additions, deletions, or modifications to the contents on the Service at any time without prior notice.\n\n\nExternal Data Disclaimer\n\nThe Service may contain data from external sources that are not provided or maintained by or in any way affiliated with the Company. Please note that the Company does not guarantee the accuracy, relevance, timeliness, or completeness of any information on these external sources.\n\n\nErrors and Omissions Disclaimer\n\nThe information given by the Service is for general guidance on matters of interest only. Even if the Company takes every precaution to insure that the content of the Service is both current and accurate, errors can occur. Plus, given the changing nature of laws, rules and regulations, there may be delays, omissions or inaccuracies in the information contained on the Service. The Company is not responsible for any errors or omissions, or for the results obtained from the use of this information.\n\n\nViews Expressed Disclaimer\n\nThe Service may contain views and opinions which are those of the authors and do not necessarily reflect the official policy or position of any other author, agency, organization, employer or company, including the Company. Data added by users are their sole responsibility and the users will take full responsibility, liability and blame for any libel or litigation that arises from it. The Company is not liable for any data published by users and reserves the right to delete any data for any reason whatsoever.\n\n\nNo Responsibility Disclaimer\n\nThe information on the Service is provided with the understanding that the Company makes no warranty, and expressively disclaims all warranties, as to the accuracy or completeness of the data and detections that the app provides to the end-user. In no event shall the Company or its suppliers be liable for any special, incidental, indirect, or consequential damages whatsoever arising out of or in connection with your access or use or inability to access or use the Service.\n\n\n\"Use at Your Own Risk\" Disclaimer\n\nAll information in the Service is provided \"as is\", with no guarantee of completeness, accuracy, timeliness or of the results obtained from the use of this information, and without warranty of any kind, express or implied, including, but not limited to warranties of performance, merchantability and fitness for a particular purpose. The Company will not be liable to You or anyone else for any decision made or action taken in reliance on the information given by the Service or for any consequential, special or similar damages, even if advised of the possibility of such damages. The Service should be used as an additional source of information, but it is not intended to replace other sources of information or serve as the sole source of environmental information.\n\n\nContact Us\n\nIf you have any questions about this Disclaimer, You can contact Us:\n• By email: contact@3finery.com</string>
    <string name="legalNote">Please note that the use of our app constitutes your acceptance of these terms of use and your agreement to be bound by them.</string>
    <string name="legalAccept">Accept</string>
    <string name="Error">Error</string>
    <string name="ErrorServer">Unable to connect to the server</string>
    <string name="ErrorLocation">Unable to retrieve user\'s location</string>
    <string name="Success">Success</string>
    <string name="SuccessMessage">Annotation added successfully!</string>
    <string name="Rcp_GG_Fmv_text">Audio descriptor for the blind</string>
    <string name="RpH_C5_jmw_configuration_title">Where am I?</string>
    <string name="RpH_C5_jmw_normalTitle">Where am I?</string>
    <string name="fkV_MV_XMR_configuration_title">About the app</string>
    <string name="fkV_MV_XMR_normalTitle">About the app</string>
    <string name="nyh_ZO_jd7_configuration_title">Explore surroundings</string>
    <string name="nyh_ZO_jd7_normalTitle">Explore surroundings</string>
    <string name="wSh_sR_S5p_configuration_title">Add annotation</string>
    <string name="wSh_sR_S5p_normalTitle">Add annotation</string>
    <string name="threeFinery">3FINERY LTD</string>
    <string name="lisboa">Câmara Municipal de Lisboa</string>
</resources>