<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context="com.threefinery.Lis.Nav.MainActivity">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/mapUserLocation"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:visibility="invisible"
        app:layout_constrainedHeight="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context="com.threefinery.Lis.Nav.BaseModuleActivity" />

    <Button
        android:id="@+id/liveButton"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/white"
        android:text="@string/nyh_ZO_jd7_configuration_title"
        android:textAllCaps="false"
        android:textColor="#11b6d5"
        app:fontFamily="sans-serif-medium"
        app:layout_constraintTop_toBottomOf="@+id/annotationButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteX="47dp" />

    <Button
        android:id="@+id/aboutButton"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:background="@android:color/transparent"
        android:text="@string/fkV_MV_XMR_configuration_title"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        app:fontFamily="sans-serif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/locationButton"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        android:background="@android:color/white"
        android:text="@string/RpH_C5_jmw_configuration_title"
        android:textAllCaps="false"
        android:textColor="#11b6d5"
        app:fontFamily="sans-serif-medium"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="44dp" />

    <Button
        android:id="@+id/annotationButton"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/white"
        android:text="@string/wSh_sR_S5p_configuration_title"
        android:textAllCaps="false"
        android:textColor="#11b6d5"
        app:fontFamily="sans-serif-medium"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locationButton" />

    <ImageView
        android:id="@+id/imageView"
        android:contentDescription="@string/app_name"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="30dp"
        android:src="@drawable/speaker"
        app:layout_constrainedHeight="true"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/Rcp_GG_Fmv_text"
        android:textColor="#ffffff"
        android:textSize="18sp"
        app:fontFamily="sans-serif-medium"
        app:layout_constraintBottom_toTopOf="@+id/locationButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>