<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context="com.threefinery.Lis.Nav.LegalActivity">

    <TextView
        android:id="@+id/textViewLegalText"
        android:layout_width="320dp"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:scrollbars="vertical"
        android:text="@string/legal"
        android:textColor="#ffffff"
        android:textSize="12sp"
        app:fontFamily="sans-serif"
        app:layout_constraintBottom_toTopOf="@+id/sendButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/sendButton"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_marginBottom="30dp"
        android:background="@android:color/white"
        android:text="@string/legalAccept"
        android:textAllCaps="false"
        android:textColor="#11b6d5"
        app:fontFamily="sans-serif-medium"
        app:layout_constraintBottom_toTopOf="@+id/textViewLegalNote"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/textViewLegalNote"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        android:scrollbars="vertical"
        android:text="@string/legalNote"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="14sp"
        app:fontFamily="sans-serif"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="46dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>